--- a/Population Map/code/02_combine_dataset.ipynb
+++ b/Population Map/code/02_combine_dataset.ipynb
@@ -16,18 +16,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All of these CSVs were pulled from Facebook's Data for Good"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_pop = pd.read_csv('../data_eda/total_pop.csv')\n",
-    "man_pop = pd.read_csv('../data_eda/man_pop.csv')\n",
-    "woman_pop = pd.read_csv('../data_eda/woman_pop.csv')\n",
-    "woman_rep = pd.read_csv('../data_eda/woman_rep.csv')\n",
-    "children_pop = pd.read_csv('../data_eda/children_pop.csv')\n",
-    "youth_pop = pd.read_csv('../data_eda/youth_pop.csv')\n",
-    "elder_pop = pd.read_csv('../data_eda/elder_pop.csv')"
+    "#total_pop = pd.read_csv('../data_eda/total_pop.csv')\n",
+    "#man_pop = pd.read_csv('../data_eda/man_pop.csv')\n",
+    "#woman_pop = pd.read_csv('../data_eda/woman_pop.csv')\n",
+    "#woman_rep = pd.read_csv('../data_eda/woman_rep.csv')\n",
+    "#children_pop = pd.read_csv('../data_eda/children_pop.csv')\n",
+    "#youth_pop = pd.read_csv('../data_eda/youth_pop.csv')\n",
+    "#elder_pop = pd.read_csv('../data_eda/elder_pop.csv')"
    ]
   },
   {
@@ -67,18 +74,18 @@
     }
    ],
    "source": [
-    "def change_column_name(df,string):\n",
-    "    for column in df.columns:\n",
-    "        df.rename(columns = {column : str(column + string)}, inplace = True)\n",
-    "    return df.columns\n",
+    "#def change_column_name(df,string):\n",
+    "#    for column in df.columns:\n",
+    "#        df.rename(columns = {column : str(column + string)}, inplace = True)\n",
+    "#    return df.columns\n",
     "\n",
-    "change_column_name(total_pop,'_total')\n",
-    "change_column_name(man_pop, '_man')\n",
-    "change_column_name(woman_pop,'_woman')\n",
-    "change_column_name(woman_rep, '_woman_rep')\n",
-    "change_column_name(children_pop,'_children')\n",
-    "change_column_name(youth_pop,'_youth')\n",
-    "change_column_name(elder_pop,'_elder')"
+    "#change_column_name(total_pop,'_total')\n",
+    "#change_column_name(man_pop, '_man')\n",
+    "#change_column_name(woman_pop,'_woman')\n",
+    "#change_column_name(woman_rep, '_woman_rep')\n",
+    "#change_column_name(children_pop,'_children')\n",
+    "#change_column_name(youth_pop,'_youth')\n",
+    "#change_column_name(elder_pop,'_elder')"
    ]
   },
   {
@@ -109,18 +116,18 @@
     }
    ],
    "source": [
-    "t0 = time.time()\n",
-    "full_df = pd.concat([\n",
-    "        total_pop.set_index('geo_location_total'),\n",
-    "        man_pop.set_index('geo_location_man'),\n",
-    "        woman_pop.set_index('geo_location_woman'),\n",
-    "        woman_rep.set_index('geo_location_woman_rep'),\n",
-    "        children_pop.set_index('geo_location_children'),\n",
-    "        youth_pop.set_index('geo_location_youth'),\n",
-    "        elder_pop.set_index('geo_location_elder')\n",
-    "        ], \n",
-    "        axis = 1)\n",
-    "print (time.time() - t0)"
+    "#t0 = time.time()\n",
+    "#full_df = pd.concat([\n",
+    "#        total_pop.set_index('geo_location_total'),\n",
+    "#        man_pop.set_index('geo_location_man'),\n",
+    "#        woman_pop.set_index('geo_location_woman'),\n",
+    "#        woman_rep.set_index('geo_location_woman_rep'),\n",
+    "#        children_pop.set_index('geo_location_children'),\n",
+    "#        youth_pop.set_index('geo_location_youth'),\n",
+    "#        elder_pop.set_index('geo_location_elder')\n",
+    "#        ], \n",
+    "#        axis = 1)\n",
+    "#print (time.time() - t0)"
    ]
   },
   {
@@ -140,7 +147,7 @@
     }
    ],
    "source": [
-    "full_df.shape"
+    "#full_df.shape"
    ]
   },
   {
@@ -156,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_df = full_df[[col for col in full_df.columns if col.startswith('population')]]"
+    "#pop_df = full_df[[col for col in full_df.columns if col.startswith('population')]]"
    ]
   },
   {
@@ -355,7 +362,7 @@
     }
    ],
    "source": [
-    "pop_df.head(10)"
+    "#pop_df.head(10)"
    ]
   },
   {
@@ -365,7 +372,7 @@
    "outputs": [],
    "source": [
     "# reset index\n",
-    "pop_df.reset_index(inplace = True)"
+    "#pop_df.reset_index(inplace = True)"
    ]
   },
   {
@@ -386,7 +393,7 @@
     }
    ],
    "source": [
-    "pop_df.rename(columns = {'index' : 'coordinate'}, inplace = True)"
+    "#pop_df.rename(columns = {'index' : 'coordinate'}, inplace = True)"
    ]
   },
   {
@@ -414,7 +421,7 @@
     }
    ],
    "source": [
-    "pop_df.dtypes"
+    "#pop_df.dtypes"
    ]
   },
   {
@@ -424,13 +431,13 @@
    "outputs": [],
    "source": [
     "# split coordinate into latitude, longtitude\n",
-    "latitude = []\n",
-    "longitude = []\n",
-    "for i in pop_df['coordinate']:\n",
-    "    lat = i.split(',')[0]\n",
-    "    lon = i.split(',')[1]\n",
-    "    latitude.append(lat)\n",
-    "    longitude.append(lon)"
+    "#latitude = []\n",
+    "#longitude = []\n",
+    "#for i in pop_df['coordinate']:\n",
+    "#    lat = i.split(',')[0]\n",
+    "#    lon = i.split(',')[1]\n",
+    "#    latitude.append(lat)\n",
+    "#    longitude.append(lon)"
    ]
   },
   {
@@ -459,8 +466,8 @@
    ],
    "source": [
     "# add latitude, longitude\n",
-    "pop_df['latitude'] = latitude\n",
-    "pop_df['longitude'] = longitude"
+    "#pop_df['latitude'] = latitude\n",
+    "#pop_df['longitude'] = longitude"
    ]
   },
   {
@@ -483,7 +490,7 @@
     }
    ],
    "source": [
-    "pop_df.columns"
+    "#pop_df.columns"
    ]
   },
   {
@@ -505,7 +512,7 @@
    ],
    "source": [
     "# drop coordinate\n",
-    "pop_df.drop(columns = 'coordinate', inplace = True)"
+    "#pop_df.drop(columns = 'coordinate', inplace = True)"
    ]
   },
   {
@@ -534,7 +541,7 @@
     }
    ],
    "source": [
-    "pop_df.isnull().sum()"
+    "#pop_df.isnull().sum()"
    ]
   },
   {
@@ -563,7 +570,7 @@
     }
    ],
    "source": [
-    "pop_df.dtypes"
+    "#pop_df.dtypes"
    ]
   },
   {
@@ -591,8 +598,8 @@
     }
    ],
    "source": [
-    "pop_df['latitude'] = pop_df['latitude'].str.strip().astype(float)\n",
-    "pop_df['longitude'] = pop_df['longitude'].str.strip().astype(float)"
+    "#pop_df['latitude'] = pop_df['latitude'].str.strip().astype(float)\n",
+    "#pop_df['longitude'] = pop_df['longitude'].str.strip().astype(float)"
    ]
   },
   {
@@ -634,10 +641,10 @@
     }
    ],
    "source": [
-    "df_cairo = pop_df.loc[(pop_df['Latitude'] > 29.8) & \n",
-    "                  (pop_df['Latitude'] < 30.2) & \n",
-    "                  (pop_df['Lognitude'] > 31.1) & \n",
-    "                  (pop_df['Lognitude'] < 31.4)]"
+    "#df_cairo = pop_df.loc[(pop_df['Latitude'] > 29.8) & \n",
+    "#                  (pop_df['Latitude'] < 30.2) & \n",
+    "#                  (pop_df['Lognitude'] > 31.1) & \n",
+    "#                  (pop_df['Lognitude'] < 31.4)]"
    ]
   },
   {
@@ -646,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cairo.to_csv('../data_eda/df_cairo.csv', index = False)"
+    "#df_cairo.to_csv('../data/df_cairo.csv', index = False)"
    ]
   },
   {
