--- a/Population Map/code/03_graph_cairo.ipynb
+++ b/Population Map/code/03_graph_cairo.ipynb
@@ -142,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Selecting only the city of Cairo real estate ads\n",
     "df_house_s = df_house.loc[(df_house['Longitude'] > 29.8) & \n",
     "                  (df_house['Longitude'] < 30.2) & \n",
     "                  (df_house['Latitude'] > 31.1) & \n",
