--- a/Real Estate Map/Cleaning.ipynb
+++ b/Real Estate Map/Cleaning.ipynb
@@ -494,6 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropping any location outside of Cairo\n",
     "df.drop(df.loc[df['Longitude'] > 30.3].index, inplace = True)\n",
     "\n",
     "df.drop(df.loc[df['Longitude'] > 32].index, inplace = True)\n",
