--- a/Population Map/code/01_add_geo_location.ipynb
+++ b/Population Map/code/01_add_geo_location.ipynb
@@ -25,13 +25,13 @@
    "outputs": [],
    "source": [
     "# Import data from Facebooks data for good\n",
-    "#total_pop = pd.read_csv('../data/total_population.csv')\n",
-    "#man_pop = pd.read_csv('../data/man_population.csv')\n",
-    "#woman_pop = pd.read_csv('../data/woman_population.csv')\n",
-    "#woman_rep = pd.read_csv('../data/woman_reprod_15_49.csv')\n",
-    "#children_pop = pd.read_csv('../data/childrean_under_5.csv')\n",
-    "#youth_pop = pd.read_csv('../data/youth_15_24.csv')\n",
-    "#elder_pop = pd.read_csv('../data/elder_over_60.csv')"
+    "total_pop = pd.read_csv('../data/total_population.csv')\n",
+    "man_pop = pd.read_csv('../data/man_population.csv')\n",
+    "woman_pop = pd.read_csv('../data/woman_population.csv')\n",
+    "woman_rep = pd.read_csv('../data/woman_reprod_15_49.csv')\n",
+    "children_pop = pd.read_csv('../data/childrean_under_5.csv')\n",
+    "youth_pop = pd.read_csv('../data/youth_15_24.csv')\n",
+    "elder_pop = pd.read_csv('../data/elder_over_60.csv')"
    ]
   },
   {
@@ -41,15 +41,15 @@
    "outputs": [],
    "source": [
     "# create a list of datasets\n",
-    "#df_list = [total_pop,man_pop,woman_pop,woman_rep,children_pop,youth_pop,elder_pop]\n",
+    "df_list = [total_pop,man_pop,woman_pop,woman_rep,children_pop,youth_pop,elder_pop]\n",
     "\n",
     "# lowercase all column names\n",
-    "#for i in df_list:\n",
-    "#    i.columns = i.columns.str.lower()\n",
+    "for i in df_list:\n",
+    "    i.columns = i.columns.str.lower()\n",
     "\n",
     "# standardize total_pop columns with the other datasets\n",
-    "#total_pop.rename(columns = {'lat': 'Longitude',\n",
-    "#                            'lon': 'Latitude'},inplace = True)"
+    "total_pop.rename(columns = {'lat': 'Longitude',\n",
+    "                            'lon': 'Latitude'},inplace = True)"
    ]
   },
   {
@@ -59,18 +59,18 @@
    "outputs": [],
    "source": [
     "# create geo_location: combine latitude and longitude, and change type to string\n",
-    "#def create_string(df):\n",
-    "#    lan_lon_list = []\n",
-    "#    for i in range(len(df)):\n",
-    "#        lan_lon_str = str(df['Latitude'][i]) + ',' + str(df['Longitude'][i])\n",
-    "#        lan_lon_list.append(lan_lon_str)\n",
-    "#    df['geo_location'] = lan_lon_list\n",
+    "def create_string(df):\n",
+    "    lan_lon_list = []\n",
+    "    for i in range(len(df)):\n",
+    "        lan_lon_str = str(df['Latitude'][i]) + ',' + str(df['Longitude'][i])\n",
+    "        lan_lon_list.append(lan_lon_str)\n",
+    "    df['geo_location'] = lan_lon_list\n",
     "\n",
     "# create geo_location in all datasets\n",
-    "#for i in df_list:\n",
-    "#    t0 = time.time()\n",
-    "#    create_string(i)\n",
-    "#    print (time.time()-t0)"
+    "for i in df_list:\n",
+    "    t0 = time.time()\n",
+    "    create_string(i)\n",
+    "    print (time.time()-t0)"
    ]
   },
   {
@@ -80,13 +80,13 @@
    "outputs": [],
    "source": [
     "# create name for datasets, enable calling df.name\n",
-    "#total_pop.name = 'total_pop'\n",
-    "#man_pop.name = 'man_pop'\n",
-    "#woman_pop.name = 'woman_pop'\n",
-    "#woman_rep.name = 'woman_rep'\n",
-    "#children_pop.name = 'children_pop'\n",
-    "#youth_pop.name = 'youth_pop'\n",
-    "#elder_pop.name = 'elder_pop'"
+    "total_pop.name = 'total_pop'\n",
+    "man_pop.name = 'man_pop'\n",
+    "woman_pop.name = 'woman_pop'\n",
+    "woman_rep.name = 'woman_rep'\n",
+    "children_pop.name = 'children_pop'\n",
+    "youth_pop.name = 'youth_pop'\n",
+    "elder_pop.name = 'elder_pop'"
    ]
   },
   {
@@ -96,8 +96,8 @@
    "outputs": [],
    "source": [
     "# output new data to csv\n",
-    "#for i in df_list:\n",
-    "#    i.to_csv(f'../data_eda/{i.name}.csv', index = False)"
+    "for i in df_list:\n",
+    "    i.to_csv(f'../data_eda/{i.name}.csv', index = False)"
    ]
   },
   {
